lesson8/wk8css/small.css
body {
    font-family: 'Open Sans', sans-serif;
    background-color: #B8D3E9;
    margin: 1rem;
}

header {
    background-color: #0D3B66;
    color: #FFFFFF;
    padding: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
}

picture {
    padding-right: 16px;
}

.headings {
    display: flex;
    flex-direction: column;
}

h1 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    font-size: 3rem;
    margin: auto;
}

h2 {
    text-align: center;
    font-weight: 500;
    margin: auto;
    padding: 1rem;
}

h4 {
    font-family: 'Open Sans', sans-serif;
    text-align: center;
    font-weight: 200;
    font-style: italic;
    margin: auto;
}

nav {
    margin: 0 auto;
    background-color: #FFDF6E;
    font-family: 'Open Sans', sans-serif;
}

.navigation {
    list-style: none;
    text-align: center;
    padding: 0;
}

.navigation li:first-child {
    display: block;
}

.navigation li {
    display: none;
}

.responsive li {
    display: block;
}

nav ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    align-items: center;
}

nav ul li a {
    display: block;
    padding: .8rem 2%;
    text-decoration: none;
    color: #000;

}

nav ul li.active a {
    background-color: #B8D3E9;
}

nav a:hover {
    background-color: rgba(0, 0, 0, 0.2);
}
/*input form starts here*/
 form fieldset {
    margin: 2rem 0;
    border: 4px solid #FFFFFF;
    border-radius: 10px;
   padding: .5rem 2%;
    max-width: 25rem;
}

form legend{
    color: #000;
    margin: 0 1rem;
    padding: 0 .5rem;
    font-size: 1.5rem;
    
    
    border: 5px solid #FFFFFF;
    background-color: #FFFFFF;
    text-align: center;
    margin: 0 auto;
    margin-top: 2rem 0;
}


form label.top, form div {
    display: block;
    padding-top: 1rem;
    color: #0D3B66;
    font-size: .8rem;
}
/*form label.top input{
    display: block;
    font-size: 1rem;
    border: solid 2px #0D3B66;
    border-radius: 2px;
    padding: .75rem;
    width: 100%;
    max-width: 20rem;
}
*/
form label.top input, form label.top select {
    
        display: block;
        font-size: 1rem;
        padding: .75rem;
        border-radius: 4px;
        border: 1px solid;
        width: 100%;
        max-width: 20rem;
        background-color: rgba(0, 0, 0, 0.1);
}
form label.radio {
    display: block;
    padding: .75 rem 0;
    color: #000;
}
form input.submitBtn {
    border: none;
    background-color: #FFDF6E;
    color: #000;
    border-radius: .5rem;
    border: 2px solid #cccccc;
    padding: .75rem 1.5rem;
    margin: 0 0 2rem 2%;
    width: 96%;
    max-width: 20rem;
}

form label.top input:required {
    border-left: red solid 6px;
    }

form label.top input:required:valid {
    border-left: green solid 6px; 
}
/*this is for the Thank you page*/
main h1, main p {
    padding: 1rem;
    text-align: center;
}





footer {
    display: block;
    padding: 8px;
    margin: 8px auto;
    text-align: center;
    max-width: 100%;
    background-color: #0D3B66;
    color: #FFFFFF;

}

footer a {
    color: #FFFFFF;
}

